Made some changes

--- a/app/index.html
+++ b/app/index.html
@@ -44,41 +44,83 @@
 			<h4>The Team</h4>	
 		</div>
 		<div class="content_sec">
-		<item>
-			<box_item>
-			<img src="img/big_circle.png" alt="">
-			<h3>Adrian Thomas</h3>
-			<h4>CEO & Founder</h4>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-			</box_item>
-			<box_item>
-			<img src="img/circle_plus.png" alt="">
-			<h3>Narate Ketram</h3>
-			<h4>Creative Director</h4>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-			</box_item>
-			<box_item>
-			<img src="img/big_circle.png" alt="">
-			<h3>Fernando Comet</h3>
-			<h4>CEO & Founder</h4>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-			</box_item>
-			<box_item>
-			<img src="img/big_circle.png" alt="">
-			<h3>Adedayo saheed</h3>
-			<h4>Creative Director</h4>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-			</box_item>
-		</item>
-
+			<div class="item">
+				<div class="box_item">
+				<img src="img/big_circle.png" alt="">
+					<h3>Adrian Thomas</h3>
+					<h4>CEO & Founder</h4>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
+				</box_item>
+				<box_item>
+				<img src="img/circle_plus.png" alt="">
+					<h3>Narate Ketram</h3>
+					<h4>Creative Director</h4>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
+				</box_item>
+				<box_item>
+					<img src="img/big_circle.png" alt="">
+				<h3>Fernando Comet</h3>
+					<h4>CEO & Founder</h4>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
+				</box_item>
+				<box_item>
+				<img src="img/big_circle.png" alt="">
+					<h3>Adedayo saheed</h3>
+					<h4>Creative Director</h4>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
+				</box_item>
+			</item>
+			</div>
+			</div>
 		</div>
 
 
 	</div>
-
-
-
 </section>
+
+<footer>
+	<div class="footer">
+		<div class="center_footer">
+			<h4>Contact Us</h4>
+		</div>
+		<div class="left_footer">
+			<h4>Get in touch with us</h4>
+			<h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</h3>
+			<div class="social">
+				<a href="#"><img src="img/facebook.png" alt=""></a>
+				<a href="#"><img src="img/twitter.png" alt=""></a>
+				<a href="#"><img src="img/google.png" alt=""></a>
+				<p>Posted by Dospel & GanjaParker</p>
+				<p>+XX-XXXX-XXXX-XX</p>
+				<p>info@mail.com</p>
+
+			</div>	
+		</div>
+
+		<div class="rihgt_footer">
+			
+			<div class="contact_form">
+				<div class="box_form">
+					<form action="">
+						<input type="form1" placeholder="Name">
+						<input type="form1" placeholder="Email">	
+						</form>	
+			
+			<div class="contact_form_2">
+				<form action="">
+					<input type= "text1" placeholder="Massage">
+					</form>
+			</div>
+			</div>
+			
+				<div class="btn">
+				<a href="#">
+					Send
+				</a>
+			</div>
+				</div>
+		</div>
+</footer>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
