--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 	<title>Pages</title>
 </head>  
 <body>
-	<header class="header">
+<header class="header">
 		<div class="container">
 			<div class="top_header">
 				<div class="logo">
@@ -32,9 +32,7 @@
 			<p>Lorem Ipsum is simply dummy text of the priting </p>
 		</div>
 		<div class="centre_botton">
-			<a href="#">
-				Learn More
-			</a>
+			<a href="#">Learn More</a>
 		</div>
 	</div>
 </header>
@@ -47,29 +45,28 @@
 			<div class="item">
 				<div class="box_item">
 				<img src="img/big_circle.png" alt="">
-					<h3>Adrian Thomas</h3>
-					<h4>CEO & Founder</h4>
+					<h4>Adrian Thomas</h4>
+					<h3>CEO & Founder</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-				</box_item>
-				<box_item>
+				</div>
+				<div class="box_item">
 				<img src="img/circle_plus.png" alt="">
-					<h3>Narate Ketram</h3>
-					<h4>Creative Director</h4>
+					<h4>Narate Ketram</h4>
+					<h3>Creative Director</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-				</box_item>
-				<box_item>
+				</div>
+			<div class="box_item">
 					<img src="img/big_circle.png" alt="">
-				<h3>Fernando Comet</h3>
-					<h4>CEO & Founder</h4>
+					<h4>Fernando Comet</h4>
+					<h3>CEO & Founder</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-				</box_item>
-				<box_item>
+				</div>
+				<div class="box_item">
 				<img src="img/big_circle.png" alt="">
-					<h3>Adedayo saheed</h3>
-					<h4>Creative Director</h4>
+					<h4>Adedayo saheed</h4>
+					<h3>Creative Director</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
-				</box_item>
-			</item>
+				</div>		
 			</div>
 			</div>
 		</div>
