Made some changes

--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/libs.min.css">
+	<link rel="stylesheet" type="text/css" href="css/libs.css">
 	<link rel="stylesheet" href="css/main.css">   
 	<title>Pages</title>
 </head>  
 <body>
-<header class="header">
+	<header class="header"> 
 		<div class="container">
 			<div class="top_header">
 				<div class="logo">
@@ -25,14 +25,23 @@
 
 		</div>
 	</div>
-	<div class="centre_container">
-
-		<div class="text_clas1">
-			<h4>This is a main heading</h4>
-			<p>Lorem Ipsum is simply dummy text of the priting </p>
-		</div>
-		<div class="centre_botton">
-			<a href="#">Learn More</a>
+	<div class="carousel_box">
+		<div class="owl_carousel">
+			<div class="item_1">
+			<div class="name"><h4>This is a main headin</h4></div>
+				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
+			</div>
+			<div class="item_1">
+				<div class="name"><h4>This is a main headin</h4></div>
+				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
+			</div>
+			<div class="item_1">
+				<div class="name"><h4>This is a main headin</h4></div>
+				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
+			</div>
+			<div class="centre_botton">
+				<a href="#">Learn More</a>
+			</div>
 		</div>
 	</div>
 </header>
@@ -44,35 +53,35 @@
 		<div class="content_sec">
 			<div class="item">
 				<div class="box_item">
-				<img src="img/big_circle.png" alt="">
+					<img src="img/big_circle.png" alt="">
 					<h4>Adrian Thomas</h4>
 					<h3>CEO & Founder</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
 				</div>
 				<div class="box_item">
-				<img src="img/circle_plus.png" alt="">
-					<h4>Narate Ketram</h4>
+					<img src="img/circle_plus.png" alt="">
+					<h4>Narate Ketram</h4>  
 					<h3>Creative Director</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
 				</div>
-			<div class="box_item">
+				<div class="box_item">
 					<img src="img/big_circle.png" alt="">
 					<h4>Fernando Comet</h4>
 					<h3>CEO & Founder</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
 				</div>
 				<div class="box_item">
-				<img src="img/big_circle.png" alt="">
+					<img src="img/big_circle.png" alt="">
 					<h4>Adedayo saheed</h4>
 					<h3>Creative Director</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</p>
 				</div>		
 			</div>
-			</div>
 		</div>
-
-
 	</div>
+
+
+</div>
 </section>
 
 <footer>
@@ -101,27 +110,27 @@
 					<form action="">
 						<input type="form1" placeholder="Name">
 						<input type="form1" placeholder="Email">	
-						</form>	
-			
-			<div class="contact_form_2">
-				<form action="">
-					<input type= "text1" placeholder="Massage">
-					</form>
-			</div>
-			</div>
-			
-				<div class="btn">
-				<a href="#">
-					Send
-				</a>
-			</div>
+					</form>	
+
+					<div class="contact_form_2">
+						<form action="">
+							<input type= "text1" placeholder="Massage">
+						</form>
+					</div>
 				</div>
+
+				<div class="btn">
+					<a href="#">
+						Send
+					</a>
+				</div>
+			</div>
 		</div>
-</footer>
+	</footer>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src='js/libs.min.js'></script>
-<script src="js/script.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src='js/libs.min.js'></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
