Made some changes

--- a/app/index.html
+++ b/app/index.html
@@ -30,17 +30,23 @@
 			<div class="item_1">
 			<div class="name"><h4>This is a main headin</h4></div>
 				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
-			</div>
-			<div class="item_1">
-				<div class="name"><h4>This is a main headin</h4></div>
-				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
-			</div>
-			<div class="item_1">
-				<div class="name"><h4>This is a main headin</h4></div>
-				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
-			</div>
-			<div class="centre_botton">
+				<div class="centre_botton">
 				<a href="#">Learn More</a>
+			</div>
+			</div>
+			<div class="item_1">
+				<div class="name"><h4>This is a main headin</h4></div>
+				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
+				<div class="centre_botton">
+				<a href="#">Learn More</a>
+			</div>
+			</div>
+			<div class="item_1">
+				<div class="name"><h4>This is a main headin</h4></div>
+				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
+				<div class="centre_botton">
+				<a href="#">Learn More</a>
+			</div>
 			</div>
 		</div>
 	</div>
@@ -83,6 +89,73 @@
 
 </div>
 </section>
+
+<div class="centre_plans">
+	<div>
+		<div class="menu_plans">
+			<ul>
+				<h4>Basic</h4>
+				<li><a href="#"><h3>$5.01/Month</h3></a></li>
+				<li><a href="#">Lorem ipsum</a></li>
+				<li><a href="#">Dolor sit amet, consect</a></li>
+				<li><a href="#">Adipiscing elit</a></li>
+				<li><a href="#">Proin commodo turpis</a></li>
+				<li><a href="#">lacus pulvinarvel</a></li>
+				<li><a href="#">Prnare nisi pretium.</a></li>
+			</ul>
+			<div class="btn_plans">
+				<a href="#">
+						Buy now
+					</a>
+			</div>
+		</div>
+	</div>
+	<div>
+		<div class="menu_plans">
+			<ul>
+				<h4>Pro</h4>
+				<li><a href="#"><h3>$10.01/Month</h3></a></li>
+				<li><a href="#">Lorem ipsum</a></li>
+				<li><a href="#">Dolor sit amet, consect</a></li>
+				<li><a href="#">Adipiscing elit</a></li>
+				<li><a href="#">Proin commodo turpis</a></li>
+				<li><a href="#">lacus pulvinarvel</a></li>
+				<li><a href="#">Prnare nisi pretium.</a></li>
+			</ul>
+			<div class="btn_plans">
+				<a href="#">
+						Buy now
+					</a>
+			</div>
+		</div>
+	</div>
+	<div>
+		<div class="menu_plans">
+			<ul>
+				<h4>Premiumm</h4>
+				<li><a href="#"><h3>$20.01/Month</h3></a></li>
+				<li><a href="#">Lorem ipsum</a></li>
+				<li><a href="#">Dolor sit amet, consect</a></li>
+				<li><a href="#">Adipiscing elit</a></li>
+				<li><a href="#">Proin commodo turpis</a></li>
+				<li><a href="#">lacus pulvinarvel</a></li>
+				<li><a href="#">Prnare nisi pretium.</a></li>
+			</ul>
+			<div class="btn_plans">
+				<a href="#">
+						Buy now
+					</a>
+			</div>
+		</div>
+	</div>
+
+
+
+
+</div>
+
+
+
 
 <footer>
 	<div class="footer">
