Made some changes

--- a/app/index.html
+++ b/app/index.html
@@ -29,21 +29,21 @@
 		<div class="owl_carousel">
 			<div class="item_1">
 			<div class="name"><h4>This is a main headin</h4></div>
-				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
+				<div class="class_1">Lorem Ipsum is simply dummy text <p>of the priting.</p></div>
 				<div class="centre_botton">
 				<a href="#">Learn More</a>
 			</div>
 			</div>
 			<div class="item_1">
 				<div class="name"><h4>This is a main headin</h4></div>
-				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
+				<div class="class_1">Lorem Ipsum is simply dummy text <p>of the priting.</p></div>
 				<div class="centre_botton">
 				<a href="#">Learn More</a>
 			</div>
 			</div>
 			<div class="item_1">
 				<div class="name"><h4>This is a main headin</h4></div>
-				<div class="class_1">Lorem Ipsum is simply dummy text of the priting.</div>
+				<div class="class_1">Lorem Ipsum is simply dummy text <p>of the priting.</p></div>
 				<div class="centre_botton">
 				<a href="#">Learn More</a>
 			</div>
@@ -51,8 +51,8 @@
 		</div>
 	</div>
 </header>
-<section>
-	<div class="section">
+<section class="section">
+	<div class="section_1">
 		<div class="text_section">
 			<h4>The Team</h4>	
 		</div>
@@ -85,13 +85,9 @@
 			</div>
 		</div>
 	</div>
-
-
-</div>
 </section>
-
-<div class="centre_plans">
-	<div>
+<content class="content">
+	<div class="centre_plans">
 		<div class="menu_plans">
 			<ul>
 				<h4>Basic</h4>
@@ -102,15 +98,11 @@
 				<li><a href="#">Proin commodo turpis</a></li>
 				<li><a href="#">lacus pulvinarvel</a></li>
 				<li><a href="#">Prnare nisi pretium.</a></li>
+				<li><a href="#"> Buy now</a></li>
 			</ul>
-			<div class="btn_plans">
-				<a href="#">
-						Buy now
-					</a>
-			</div>
+			<div class="btn_plans"></div>
 		</div>
-	</div>
-	<div>
+
 		<div class="menu_plans">
 			<ul>
 				<h4>Pro</h4>
@@ -121,18 +113,13 @@
 				<li><a href="#">Proin commodo turpis</a></li>
 				<li><a href="#">lacus pulvinarvel</a></li>
 				<li><a href="#">Prnare nisi pretium.</a></li>
+				<li><a href="#"> Buy now</a></li>
 			</ul>
-			<div class="btn_plans">
-				<a href="#">
-						Buy now
-					</a>
-			</div>
+			<div class="btn_plans"></a>	</div>
 		</div>
-	</div>
-	<div>
 		<div class="menu_plans">
 			<ul>
-				<h4>Premiumm</h4>
+				<h4>Premium</h4>
 				<li><a href="#"><h3>$20.01/Month</h3></a></li>
 				<li><a href="#">Lorem ipsum</a></li>
 				<li><a href="#">Dolor sit amet, consect</a></li>
@@ -140,23 +127,12 @@
 				<li><a href="#">Proin commodo turpis</a></li>
 				<li><a href="#">lacus pulvinarvel</a></li>
 				<li><a href="#">Prnare nisi pretium.</a></li>
+				<li><a href="#"> Buy now</a></li>
 			</ul>
-			<div class="btn_plans">
-				<a href="#">
-						Buy now
-					</a>
-			</div>
+			<div class="btn_plans"></div>
 		</div>
-	</div>
-
-
-
-
-</div>
-
-
-
-
+			</div>
+</content>
 <footer>
 	<div class="footer">
 		<div class="center_footer">
@@ -164,7 +140,7 @@
 		</div>
 		<div class="left_footer">
 			<h4>Get in touch with us</h4>
-			<h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</h3>
+			<h3>Lorem Ipsum is simply dummy text of the printing and typesetting<p>industry. Lorem Ipsum has been the industry's</p>	 </h3>
 			<div class="social">
 				<a href="#"><img src="img/facebook.png" alt=""></a>
 				<a href="#"><img src="img/twitter.png" alt=""></a>
@@ -199,7 +175,7 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+</footer>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
